# onith

./: LICENSE  NOTICE.txt  README.md  pyproject.toml
src/onith/: __init__.py  bw_harmonizer.py  export_logger.py  harmonizer_base.py  lb_harmonizer.py  manual_mapping_editor.py  mi_harmonizer.py  om_harmonizer.py  ontology_utils.py  pipeline_configurator.py
src/onith/dict/: hpath_ontology.obo  lb_terminology.obo  organ_ontology.obo
src/onith/example_data/: BW.csv  DM.csv  LICENSE  MI.csv  OM.csv
